# iTerm

./: CMakeLists.txt  README.md
putty/: CMakeLists.txt  defs.h  network.h  puttymem.h  settings.c
putty/cmake/: setup.cmake
putty/stubs/: no-rand.c
putty/terminal/: terminal.c  terminal.h
putty/utils/: memory.c
putty/windows/: CMakeLists.txt  conpty.c  winterm.c  winterm.h
win/: CMakeLists.txt  MainFrm.h  PuTTY.cpp  PuTTY.hpp  ViewTTY.h  ViewTab.h  WinDlg.h  XTabCtl.h  iTerm.cpp  iTerm.h  iTerm.rc  resource.h  stdafx.cpp  stdafx.h
